graph time selector overlap fix

--- a/src/styles/graph.scss
+++ b/src/styles/graph.scss
@@ -367,7 +367,7 @@
 		min-width: 20px;
 		height: 5px;
 		position: absolute;
-		z-index: 50;
+		z-index: 14;
 		border-radius: 2px;
 
 		&.events-panel {
